<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_menu_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_genres"
            android:icon="@mipmap/ic_menu_genres"
            android:title="@string/nav_genres"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_menu_history"
            android:title="@string/nav_history"/>

        <item
            android:id="@+id/nav_favourite"
            android:icon="@mipmap/ic_menu_bookmark"
            android:title="@string/nav_favourite"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_menu_setting"
            android:title="@string/nav_settings"/>

        <item
            android:id="@+id/nav_twitter"
            android:icon="@mipmap/ic_menu_twitter"
            android:title="@string/nav_twitter"/>

        <item
            android:id="@+id/nav_facebook"
            android:icon="@mipmap/ic_menu_facebook"
            android:title="@string/nav_facebook"/>
    </group>
</menu>